# coda

./: .gitignore  Jenkinsfile  Makefile.am  README.md  configure.ac
coda-src/: Makefile.am
coda-src/al/: alprocs.c
coda-src/dir/: codadir.h
coda-src/kerndep/: coda.h
coda-src/norton/: Makefile.am  dummy.cc  norton-reinit.cc  norton-setup.cc  norton-vnode.cc
coda-src/resolution/: Makefile.am  timing.cc  timing.h
coda-src/scripts/: .gitignore  Makefile.am  createvol.8  createvol.in  purgevol.8  purgevol.in  vice-setup.in
coda-src/smon2/: getvolinfo.c
coda-src/util/: bitmap.cc  bitmap.h  rvmlib.c
coda-src/venus/: .gitignore  9pfs.cc  Makefile.am  SpookyV2.cc  archive.c  binding.cc  cache.h  comm.cc  comm.h  comm_daemon.cc  daemon.cc  daemon.subsystem.h  fso.h  fso0.cc  fso1.cc  fso_cachefile.cc  fso_cachefile.h  fso_cfscalls0.cc  fso_cfscalls1.cc  fso_cfscalls2.cc  fso_chunkedcachefile.cc  fso_daemon.cc  fso_dir.cc  fso_wholecachefile.cc  hdb.cc  hdb.h  hdb_daemon.cc  local.h  local_cml.cc  local_fake.cc  local_fso.cc  local_repair.cc  local_vol.cc  logging_subsystem.cc  logging_subsystem.h  mariner.cc  mgrp.cc  nt_util.cc  realm.cc  realmdb.cc  (+46 more)
coda-src/venus/include/: hdb.h
coda-src/venus/logging/: filelogger.cc  logger.cc  logging.cc  venus.cc
coda-src/venus/recov/: recov.cc  rvmrecov.cc
coda-src/venus/rpc2/: rpc2.cc  vicerpc2.cc
coda-src/vice/: Makefile.am  clientproc.cc  codaproc.cc  codaproc2.cc  coppend.h  smon.cc  srv.cc  srvproc.cc  srvproc2.cc  vice.private.h  vicecb.cc
coda-src/vicedep/: Makefile.am  operations.h  recov_vollog.h  srv.h  vice.rpc2  volutil.rpc2
coda-src/vol/: clone.cc  cvnode.cc  cvnode.h  dumpcamstorage.cc  lockqueue.cc  recov.h  recovb.cc  recovc.cc  treeremove.h  vldb.cc  vldb.h  vlist.h  vol-debug.cc  volume.cc  volume.h  vrdb.cc  vrdb.h  vutil.cc
coda-src/volutil/: Makefile.am  codadump2tar.cc  codamergedump.cc  codareaddump.cc  dump.h  dumpstream.cc  dumpstuff.cc  vol-backup.cc  vol-clone.cc  vol-create.cc  vol-dump.cc  vol-dumpvrdb.cc  vol-info.cc  vol-lookup.cc  vol-makevldb.cc  vol-makevrdb.cc  vol-restore.cc  vol-rvmsize.cc  vol-rvmtrunc.cc  vol-salvage.cc  vol-salvage.private.h  vol-setlogparms.cc  vol-setvv.cc  vol-showvnode.cc  vol-timing.cc  volclient.cc  volutil.cc  volutil.private.h
coda-src/vtools/: Makefile.am
coda-src/vv/: inconsist.h
lib-src/base/: codaenv.c  copyfile.c  copyfile.h
test/: Makefile.am
test-src/: Makefile.am  requirements.txt
test-src/functional/: Makefile.am  test_cache_files.py  test_cache_movies.py  test_reintegration.py
test-src/unit/: Makefile.am  main.cc
test-src/unit/include/test/rvm/: rvm.h
test-src/unit/lib/rvm/: rvm.cc
test-src/unit/util/: Makefile.am  u_bitmap.cc  venusconf_ut.cc
test-src/unit/venus/: Makefile.am  fso_cachefile_ut.cc  logging_ut.cc  u_cachefile.cc  userent_ut.cc  venus_symbols.cc
test-src/util/: cfs.py  testdata.py  utils.py
test/lib/: Makefile.am
test/src/: Makefile.am
test/src/coda-src/: Makefile.am
test/src/coda-src/util/: Makefile.am  dlist.cc
utils-src/mond/: parselog.c
(+50 files in other folders)
